# Credit_Risk_MLOps

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  resources.md  uv_guide.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
docs/: git_guide.md  java_installations.md  xgboost_installation.md
notebooks/: create_embeddings_initial.ipynb
notebooks/common_notebooks/: push_to_db.ipynb  starter_notebook.ipynb
notebooks/data_cleaning/: application_table_cleaing.ipynb  application_table_cleaning.ipynb  bureau_cleaning.ipynb  previous_application_cleaning.ipynb
notebooks/process_push_raw_data/: process_push_data_source_db.ipynb
notebooks/training_initial_model/: xgboost.ipynb
src/data/: cleaning.py  explore_column_info.py
