[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlflow>=2.22.0",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "pre-commit>=4.2.0",
    "psycopg2>=2.9.10",
    "pyspark>=4.0.0",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "ruff>=0.11.12",
    "scikit-learn>=1.6.1",
    "setuptools>=80.9.0",
    "sqlalchemy>=2.0.41",
]
